--- a/case-study/src/app/header/header.component.html
+++ b/case-study/src/app/header/header.component.html
@@ -16,8 +16,8 @@
           <li class="nav-item submenu dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Customer</a>
             <ul class="dropdown-menu">
-              <li class="nav-item"><a class="nav-link" [routerLink]="['/customer-list']">List</a></li>
-              <li class="nav-item"><a class="nav-link" [routerLink]="['/customer-create']" >Create</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/customer/list']">List</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/customer/create']" >Create</a></li>
             </ul>
           </li>
 
@@ -32,16 +32,16 @@
           <li class="nav-item submenu dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Facility</a>
             <ul class="dropdown-menu">
-              <li class="nav-item"><a class="nav-link" [routerLink]="['/facility-list']">List</a></li>
-              <li class="nav-item"><a class="nav-link" [routerLink]="['/facility-create']">Create</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/facility/list']">List</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/facility/create']">Create</a></li>
             </ul>
           </li>
 
           <li class="nav-item submenu dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contract</a>
             <ul class="dropdown-menu">
-              <li class="nav-item"><a class="nav-link" [routerLink]="['/contract-list']">List</a></li>
-              <li class="nav-item"><a class="nav-link" [routerLink]="['/contract-create']">Create</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/contract/list']">List</a></li>
+              <li class="nav-item"><a class="nav-link" [routerLink]="['/contract/create']">Create</a></li>
             </ul>
           </li>
         </ul>
