--- a/case-study/src/app/facility/facility-create/facility-create.component.html
+++ b/case-study/src/app/facility/facility-create/facility-create.component.html
@@ -126,10 +126,10 @@
         </div>
         <div class="d-flex justify-content-center">
           <div class="mx-2">
-            <a href="#" class="button button--cancel cancel-banner-btn">Cancel</a>
+            <a [routerLink]="['/facility/list']" class="btn btn-secondary">Cancel</a>
           </div>
           <div class="mx-2">
-            <button type="submit">Create</button>
+            <button type="submit" class="btn btn-success">Create</button>
           </div>
         </div>
       </div>
