--- a/case-study/src/app/facility/facility-edit/facility-edit.component.html
+++ b/case-study/src/app/facility/facility-edit/facility-edit.component.html
@@ -124,10 +124,10 @@
         </div>
         <div class="d-flex justify-content-center">
           <div class="mx-2">
-            <a href="#" class="button button--cancel cancel-banner-btn">Cancel</a>
+            <a [routerLink]="['/facility/list']" class="btn btn-secondary">Cancel</a>
           </div>
           <div class="mx-2">
-            <button type="submit"  class="button button--active home-banner-btn">Update</button>
+            <button type="submit"  class="btn btn-success">Update</button>
           </div>
         </div>
       </div>
