--- a/test1/angular-test1/src/app/land_transaction/transaction-list/transaction-list.component.html
+++ b/test1/angular-test1/src/app/land_transaction/transaction-list/transaction-list.component.html
@@ -7,6 +7,7 @@
       </div>
       <h2>We are one</h2>
     </div>
+    <input type="button" class="btn btn-success" value="Create" [routerLink]="['/transaction-create']">
     <p class="mt-3">Searching customer </p>
     <div class="form-inline my-lg-3">
       <div class="row">
@@ -17,7 +18,8 @@
         <div class="col">
           <select name="customerType"
                   class="form-control" name="keySearch2" id="keySearch2" #keySearch2>
-            <option *ngFor="let item of facilityType" [ngValue]="item">{{item.type}}</option>
+            <option value="">Chọn</option>
+            <option *ngFor="let item of facilityType" value="{{item.id}}">{{item.type}}</option>
           </select>
         </div>
         <div class="col">
@@ -25,7 +27,7 @@
         </div>
       </div>
     </div>
-    <table class="table table-borderless table-striped table-responsive">
+    <table class="table table-borderless table-striped">
       <thead class="thead-dark">
       <tr>
         <th scope="col">Mã giao dịch</th>
